# tauri_update_test

./: package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Version.vue
