[package]
name = "update-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-drive = "0.7.0"
url = "2.5.0"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
